methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:14: error: Unit does not take parameters
run() {
      ^